src/objects/Referral__c.object
<CustomObject>
    <description>REFERRAL - Stores data related to clients being referred</description>
    <fields>
        <fullName>ADL_Summary__c</fullName>
        <label>ADL Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Access_to_Public_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to Public Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessible_Housing_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessible Housing Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessible_Vehicle_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessible Vehicle Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Delinquent__c</fullName>
        <label>Is this client adjudicated delinquent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjudicated_offense_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjudicated Offense Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjudicated_offenses__c</fullName>
        <label>Adjudicated offenses</label>
        <picklist>
            <picklistValues>
                <fullName>Misdemeanor/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Felony/ies</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Admission_Location__c</fullName>
        <label>Admission Location</label>
        <picklist>
            <picklistValues>
                <fullName>Any Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowan Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escondido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno-Marks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno-Weber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilroy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granite Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Habra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laramie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas Carmen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Littleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ludlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxnard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix-Arcadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasanton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santiago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tustin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilbur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admission_Steps_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admission Steps Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Care__c</fullName>
        <label>Is this client receiving after care?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <inlineHelpText>If the Referral Source is a Hospital, enter the Hospital name here. If the Referral Source is a Payor, enter the Company name here.</inlineHelpText>
        <label>Referral Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggressive_to_Peers_Description__c</fullName>
        <label>Aggressive to Peers Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggressive_to_Self_Description__c</fullName>
        <label>Aggressive to Self Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggressive_to_Staff_Description__c</fullName>
        <label>Aggressive to Staff Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Cruelty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Animal Cruelty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_Admission_DateTime__c</fullName>
        <label>Anticipated Admission DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Anticipated_Admission_Date__c</fullName>
        <label>Anticipated Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Job_Accomodations__c</fullName>
        <description>WV specific field</description>
        <label>Anticipated Job Accomodations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_State_Interested_In__c</fullName>
        <label>Area of State Interested In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <description>Assessment Date</description>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Users__c</fullName>
        <description>Rollup field that concatenates all active assigned users from the Referral Location object for reporting purposes only</description>
        <label>Assigned Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aversive_Procedures_Currently_in_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aversive Procedures Currently in Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axis_III__c</fullName>
        <label>Axis III</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_II__c</fullName>
        <label>Axis II</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_IV__c</fullName>
        <label>Axis IV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_I__c</fullName>
        <label>Axis I</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_V__c</fullName>
        <label>Axis V</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Summary__c</fullName>
        <label>Behavior Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <label>Billing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_of_Service__c</fullName>
        <label>Branch of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <label>Brokerage</label>
        <picklist>
            <picklistValues>
                <fullName>Community Pathways, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Supports, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Oregon Support Services Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Access- High Desert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclusion, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independence Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Services Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Oregon Brokerage- Mid Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Oregon Brokerage- Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Connections of Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Determination Resources, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Oregon Regional Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCP Connections</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CHESSIE_ID__c</fullName>
        <label>CHESSIE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYBER_ID_Number__c</fullName>
        <label>CYBER ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYBER_Referral_Number__c</fullName>
        <label>CYBER Referral Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Be_Placed_With_Other_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Be Placed With Other Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caretrack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caretrack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Name__c</fullName>
        <label>Case Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Phone__c</fullName>
        <label>Case Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cause_Of_Injury_Previous__c</fullName>
        <label>Cause Of Injury(Previous)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_of_Injury_Other__c</fullName>
        <label>Specify Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_of_Injury__c</fullName>
        <description>MN Specific</description>
        <label>Cause of Injury</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_of_Injury_pick__c</fullName>
        <label>Cause of Injury</label>
        <picklist>
            <picklistValues>
                <fullName>Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Birth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blast Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain Tumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Arrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drowning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gunshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military - Combat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicle - Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicle - Passenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedestrian Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Inflicted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaken Baby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Struck by Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chemical_Dep_Treatment_Date_Completed__c</fullName>
        <label>Chemical Dep Treatment Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chemical_Dependency_Treatment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chemical Dependency Treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chemical_Use_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chemical Use (Current)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chemical_Use_Recovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chemical Use (Recovery)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Choking_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Choking Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>MN Specific</description>
        <inlineHelpText>If different than the person&apos;s permanent location</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Evaluation_Status__c</fullName>
        <label>Clinical Evaluation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Comment__c</fullName>
        <label>Close Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Reason_Detail__c</fullName>
        <label>Close Reason Detail</label>
        <picklist>
            <controllingField>Close_Reason__c</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home with Family (no services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Treatment/Day Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled Nursing Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out-of-Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-covered Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay Not Agreeable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet MCD Financial Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCD/Waiver/MCO Denial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Identifiable Funding Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-compensable Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Protection (LOP) Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorization Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Programming Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric Services Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic Needs Too Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing Needs Too Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Identified Brain Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Bed Availability in Requested/Appropriate Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Admitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Provider Chosen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chose Another Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Meet Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Inadequate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Home Provider Refusal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Refused Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Exceed Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Known Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Match 2nd Client Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No match geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Match required no children in the home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Open Bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No suitable placement available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Vacancies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Withdrawn Family Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to another Network Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to this program for evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Summary__c</fullName>
        <label>Communication Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>Baker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clackamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clatsop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deschutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Douglas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilliam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hood River</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefferson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josephine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klamath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malheaur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multnomah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tillamook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umatilla</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Alcohol_Use__c</fullName>
        <label>Current Alcohol Use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Charges__c</fullName>
        <label>Current Charges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Chemical_Use_Date_Last_Used__c</fullName>
        <label>Current Chemical Use Date Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Drug_Use__c</fullName>
        <label>Current Drug Use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Juvenile_Services_Involvement__c</fullName>
        <label>Current Juvenile Services Involvement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Location_Name__c</fullName>
        <description>Added in EB-353</description>
        <label>Current Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Location_Type__c</fullName>
        <label>Current Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acute Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board &amp; Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other LTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Hospital Brain Injury Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <description>MN Specific</description>
        <label>Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Medical_Conditions__c</fullName>
        <description>West Virginia Specific field</description>
        <label>Current Medical Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Medications__c</fullName>
        <label>Current Medications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pending_Litigation_Description__c</fullName>
        <label>Current Pending Litigation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pending_Litigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Pending Litigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Representative_Payee__c</fullName>
        <label>Current Representative Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Tobacco_Use_Description__c</fullName>
        <label>Current Tobacco Use Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Injury__c</fullName>
        <description>MN specific</description>
        <label>Date of Injury</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <description>Days between NOW() and CreatedDate.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Convert_Referral__c</fullName>
        <formula>if(ISPICKVAL( Close_Reason__c, &quot;Admitted&quot;),  Close_Date__c - Referral_Date__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Convert Referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>